Fix spacing.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,4 @@
-html{
+html {
 	margin:0;
 	padding:0;
 	background:#fff;
@@ -15,11 +15,12 @@ body {
 .primary-header-wrapper {
 	background:#fff;
 	overflow:auto;
+	padding:0 18px;
 }
 .primary-header {
 	position:relative; /* Correctly position account links */
-	max-width:780px;
-	margin:15px auto;
+	max-width:980px;
+	margin:18px auto;
 }
 .primary-logo {
 	display:inline;
@@ -49,17 +50,19 @@ body {
 }
 
 .primary-main {
-	max-width:780px;
-	margin:15px auto;
+	max-width:980px;
+	margin:18px auto;
+	padding:0 18px;
 }
 
 .primary-footer-wrapper {
 	background:#fff;
 	overflow:auto;
+	padding:0 18px;
 }
 .primary-footer {
-	max-width:780px;
-	margin:15px auto;
+	max-width:980px;
+	margin:18px auto;
 	text-align:center;
 	font-weight:bold;
 }
@@ -68,11 +71,11 @@ body {
 	margin-bottom:0;
 }
 .primary-footer-nav {
-	margin-left:-15px;
-	margin-right:-15px;
+	margin-left:-18px;
+	margin-right:-18px;
 }
 .primary-footer-nav > a {
-	margin:0 15px;
+	margin:0 18px;
 }
 
 
